--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 
 <body onload="init();">
-<script src="http://code.createjs.com/soundjs-0.5.2.min.js"></script>
+<script src="soundjs-0.5.2.min.js"></script>
 
 	<div id="loader"></div>
 
